the new one labeche

--- a/src/html/dash_product.html
+++ b/src/html/dash_product.html
@@ -234,8 +234,9 @@
             </div>
         </div>
     </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <script src="../script.js"></script>
-    <script src="../JS/dashboard.js"></script>
+    <script src="../js/dashboard.js"></script>
 </body>
 </html>
