--- a/src/html/guest.html
+++ b/src/html/guest.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
   <!-- ===== Fontawesome CDN Link ===== -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
-        <link rel="stylesheet" href="../CSS/guest_style.css" />
+        <link rel="stylesheet" href="../css/guest_style.css" />
         <link
             href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css"
             rel="stylesheet"
