--- a/src/html/dash-1.html
+++ b/src/html/dash-1.html
@@ -22,22 +22,22 @@
         </div>
         <div class="frame-parent">
           <div class="frame-group">
-            <img class="frame-child" alt="" src="./public/frame-1968.svg" />
+            <img class="frame-child" alt="" src="../../public/frame-1968.svg" />
             <div class="total-sales">Total Sales</div>
             <b class="b">$22,045.00</b>
           </div>
           <div class="frame-group">
-            <img class="frame-child" alt="" src="./public/frame-19681.svg" />
+            <img class="frame-child" alt="" src="../../public/frame-19681.svg" />
             <div class="total-sales">Total Products</div>
             <b class="b">100</b>
           </div>
           <div class="frame-group">
-            <img class="frame-child" alt="" src="./public/frame-19682.svg" />
+            <img class="frame-child" alt="" src="../../public/frame-19682.svg" />
             <div class="total-sales">Total Reviews</div>
             <b class="b">100,00</b>
           </div>
           <div class="frame-group">
-            <img class="frame-child" alt="" src="./public/frame-19683.svg" />
+            <img class="frame-child" alt="" src="../../public/frame-19683.svg" />
             <div class="total-sales">Total Visitors</div>
             <b class="b">25,000.00</b>
           </div>
