--- a/src/html/add-product.html
+++ b/src/html/add-product.html
@@ -191,7 +191,7 @@
 
     <!-- Main JS-->
     <script src="../js/add-product.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
 </html>
