--- a/src/html/dash-1.html
+++ b/src/html/dash-1.html
@@ -15,7 +15,7 @@
     <div class="dashboard">
       <div class="welcome-back-user-parent">
         <div class="welcome-back-user-container">
-          <b>Welcome Back,</b><span class="user"><span class="span"> </span><span>Kadida!</span></span>
+          <b>Welcome Back,</b><span class="user"><span class="span"> </span><span id="userN">Kadida!</span></span>
         </div>
         <div class="look-whats-happening">
           Look what’s happening with your store’s update.
@@ -24,32 +24,32 @@
           <div class="frame-group">
             <img class="frame-child" alt="" src="../../public/frame-1968.svg" />
             <div class="total-sales">Total Sales</div>
-            <b class="b">$22,045.00</b>
+            <b class="b" id="totalS">$22,045.00</b>
           </div>
           <div class="frame-group">
             <img class="frame-child" alt="" src="../../public/frame-19681.svg" />
             <div class="total-sales">Total Products</div>
-            <b class="b">100</b>
+            <b class="b" id="totalP">100</b>
           </div>
           <div class="frame-group">
             <img class="frame-child" alt="" src="../../public/frame-19682.svg" />
             <div class="total-sales">Total Reviews</div>
-            <b class="b">100,00</b>
+            <b class="b" id="totalR">100,00</b>
           </div>
           <div class="frame-group">
             <img class="frame-child" alt="" src="../../public/frame-19683.svg" />
             <div class="total-sales">Total Visitors</div>
-            <b class="b">25,000.00</b>
+            <b class="b" id="totalV">25,000.00</b>
           </div>
         </div>
         <div class="chart-parent">
           <b class="sales-analytic">Sales Analytic</b>
           <div class="this-week-parent">
-            <select name="pets" class="this-week">variant
-              <option value="hamster">that day</option>
-              <option value="dog">this week</option>
-              <option value="cat">this month</option>
-              <option value="parrot">this year</option>
+            <select name="Status" class="this-week" id="selectVariable" onchange="updateChart()">variant
+              <option value="jour">that day</option>
+              <option value="semaine">this week</option>
+              <option value="mois">this month</option>
+              <option value="annee">this year</option>
             </select>
           </div>
           <div class="container-chart">
@@ -58,12 +58,29 @@
           <script src="../js/chart.js"></script>
         </div>
         <div class="recent-orders-parent">
-          <b class="recent-orders">Recent Orders</b><button class="see-all">See All</button>
-          <div class="photo-parent">
+          <b class="recent-orders">Recent Orders</b>
+          <a href="../html/guest.html">
+            <button class="see-all">See All</button>
+          </a>
+          <table>
+            <thead>
+              <tr>
+                <th>Photo</th> <br><br><br><br>
+                <th>Nom du produit</th>
+                <th>Date</th>
+                <th>Nom du client</th>
+                <th>Prix</th>
+                <th>Statut</th>
+              </tr>
+            </thead>
+            <tbody id="orderTableBody"></tbody>
+          </table>
+
+          <!-- <div class="photo-parent">
             <b class="photo">Photo</b><b class="photo">Product name</b><b class="photo">Date</b><b
               class="photo">Customer</b><b class="photo">Price</b><b class="photo">Status</b>
-          </div>
-          <div class="frame-parent2">
+          </div> -->
+          <!-- <div class="frame-parent2">
             <div class="frame-parent3">
               <img class="frame-child1" alt="" src="../../public/frame-1974@2x.png" />
               <div class="product-wrapper">
@@ -145,18 +162,20 @@
               </div>
             </div>
 
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="sidebar">
-        <button class="logo54-1-parent">
-          <img class="logo54-1-icon" alt="" src="../../public/logo54-1@2x.png" />
-          <div class="buy-it">Buy-it</div>
-        </button>
+        <a href="../html/guest.html">
+          <button class="logo54-1-parent">
+            <img class="logo54-1-icon" alt="" src="../../public/logo54-1@2x.png" />
+            <div class="buy-it">Buy-it</div>
+          </button>
+        </a>
         <div class="line-parent">
           <div class="line-div"></div>
           <div class="nav-parent">
-            <button class="nav">
+            <button class="nav" id="dash" >
               <img class="dashboard-1-icon" alt="" src="../../public/dashboard-1.svg" />
               <div class="sales">Dashboard</div>
             </button><button class="nav">
@@ -202,6 +221,57 @@
       </div>
     </div>
   </div>
+  <script>
+    function addOrder(photo, productName, date, clientName, price, status) {
+      var tableBody = document.getElementById('orderTableBody');
+
+      var row = document.createElement('tr');
+      if (status === 'delivered') {
+        row.classList.add('delivered');
+      } else if (status === 'pending') {
+        row.classList.add('pending');
+      }
+
+      var photoCell = document.createElement('td');
+      var photoImg = document.createElement('img');
+      photoImg.src = photo;
+      photoImg.alt = 'Product Photo';
+      photoImg.classList.add('product-photo'); // Ajout de la classe CSS
+      photoCell.appendChild(photoImg);
+      row.appendChild(photoCell);
+
+      var productNameCell = document.createElement('td');
+      productNameCell.textContent = productName;
+      row.appendChild(productNameCell);
+
+      var dateCell = document.createElement('td');
+      dateCell.textContent = date;
+      row.appendChild(dateCell);
+
+      var clientNameCell = document.createElement('td');
+      clientNameCell.textContent = clientName;
+      row.appendChild(clientNameCell);
+
+      var priceCell = document.createElement('td');
+      priceCell.textContent = price;
+      row.appendChild(priceCell);
+
+      var statusCell = document.createElement('td');
+      statusCell.textContent = status === 'delivered' ? 'Délivré' : 'Pas encore';
+      row.appendChild(statusCell);
+
+      tableBody.appendChild(row);
+    }
+
+    // Exemples de commandes (peut être remplacé par des données dynamiques)
+    addOrder('../../public/frame-1974@2x.png', 'Produit 1', '2023-05-19', 'John Doe', '$50', 'delivered');
+    addOrder('../../public/frame-1974@2x.png', 'Produit 2', '2023-05-18', 'Jane Smith', '$30', 'pending');
+    addOrder('../../public/frame-1974@2x.png', 'Produit 2', '2023-05-18', 'Jane Smith', '$30', 'pending');
+    addOrder('../../public/frame-1974@2x.png', 'Produit 2', '2023-05-18', 'Jane Smith', '$30', 'pending');
+    addOrder('../../public/frame-1974@2x.png', 'Produit 2', '2023-05-18', 'Jane Smith', '$30', 'pending');
+    addOrder('../../public/frame-1974@2x.png', 'Produit 2', '2023-05-18', 'Jane Smith', '$30', 'pending');
+
+  </script>
 </body>
 
 </html>
