--- a/src/html/dash-1.html
+++ b/src/html/dash-1.html
@@ -175,7 +175,7 @@
         <div class="line-parent">
           <div class="line-div"></div>
           <div class="nav-parent">
-            <button class="nav" id="dash" >
+            <button class="nav" id="dash">
               <img class="dashboard-1-icon" alt="" src="../../public/dashboard-1.svg" />
               <div class="sales">Dashboard</div>
             </button><button class="nav">
@@ -270,6 +270,7 @@
     addOrder('../../public/frame-1974@2x.png', 'Produit 2', '2023-05-18', 'Jane Smith', '$30', 'pending');
     addOrder('../../public/frame-1974@2x.png', 'Produit 2', '2023-05-18', 'Jane Smith', '$30', 'pending');
     addOrder('../../public/frame-1974@2x.png', 'Produit 2', '2023-05-18', 'Jane Smith', '$30', 'pending');
+    addOrder('../../public/frame-1974@2x.png', 'Produit x', '2023-05-20', 'bendida', '381da', 'delivered');
 
   </script>
 </body>
