wishlist kmlt khouti

--- a/product-details.html
+++ b/product-details.html
@@ -1143,7 +1143,7 @@
                                     <i class="ri-shopping-cart-line"></i>
                                     <span>Cart</span>
                                     <div class="fly-item">
-                                        <span class="item-number">0</span>
+                                        <span class="item-number" id="item-number">0</span>
                                     </div>
                                 </a>
                             </li>
