3wdt les pages t3 catégorie T3 ch3ar psq whd lklb my3rfch yfahem

--- a/src/html/add-product.html
+++ b/src/html/add-product.html
@@ -201,7 +201,7 @@
                             </div>
                         </div>
                         <div class="p-t-15">
-                            <button class="btn btn--radius-2 btn--blue btn-work" id="submit" type="button">Add</button>
+                            <button class="btn btn--radius-2 btn--blue btn-work" id="save" type="button">Add</button>
                             <button class="btn1 btn--radius-2 btn--trans" id="cancel" type="reset">Cancel</button>
                         </div>
                     </form>
@@ -219,7 +219,7 @@
 
     <!-- Main JS-->
     <script src="../js/add-product.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
 </html>
