--- a/login.html
+++ b/login.html
@@ -70,8 +70,8 @@
     </div>
     <script src="/emojiscript.js"></script>
     <script>
-        if(sessionStorage.getItem('token')){
-            console.log(sessionStorage.getItem('token'))
+        if(localStorage.getItem('token')){
+            console.log(localStorage.getItem('token'))
 
         }
         let button=document.getElementById("login");
@@ -90,8 +90,8 @@
             
             let password=document.getElementById("pass-input").value
             axios.post('https://tiny-jade-reindeer-cape.cyclic.app/api/v1/auth/login',{email,password}).then((response)=>{console.log(response.data)
-                window.location.replace('./src/html/guest.html');
-            sessionStorage.setItem('token',response.data.token.toString())}).catch((error)=>{console.log(error.response.data)})})
+                window.location.replace('/home.html');
+            localStorage.setItem('token',response.data.token.toString())}).catch((error)=>{console.log(error.response.data)})})
             
 
     </script>
