rahim dir chof push

--- a/home.html
+++ b/home.html
@@ -179,7 +179,7 @@
                             <ul class="flexitem second-links">
                                 <li id="wish-list-icon-home" class="mobile-hide"><a href="#">
                                         <div class="icon-large"><i class="ri-heart-line"></i></div>
-                                        <div class="fly-item"><span id="wishlist-number" class="item-number"></span></div>
+                                        <div class="fly-item"><span id="wishlist-number" class="item-number">0</span></div>
                                     </a></li>
                                 <li><a href="#" class="iscart">
 
