--- a/home.html
+++ b/home.html
@@ -177,11 +177,11 @@
                         </div>
                         <div class="right">
                             <ul class="flexitem second-links">
-                                <li id="wish-list-icon-home" class="mobile-hide"><a href="#">
+                                <li id="wish-list-icon-home" class="mobile-hide"><a href="src/html/wishlist.html">
                                         <div class="icon-large"><i class="ri-heart-line"></i></div>
                                         <div class="fly-item"><span id="wishlist-number" class="item-number">0</span></div>
                                     </a></li>
-                                <li><a href="#" class="iscart">
+                                <li><a  href="src/html/panier.html" class="iscart">
 
                                         <div class="icon-large">
                                             <i class="ri-shopping-cart-line"></i>
@@ -1201,7 +1201,7 @@
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <!-- Swiper JS -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-
+<script src="/src/js/Home.js"></script>
 
 
 <!-- 
